# metayaml-ng

./: .gitignore  LICENSE  MANIFEST.in  README.rst  bitbucket-pipelines.yml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/: ci-cd.yml
.github/workflows/: ci-cd.yml  sync.yml
metayaml/: __init__.py  exception.py  jinja_eval.py  metayaml.py  test.py
metayaml/test_files/: dict_update.yaml  f1.yaml  f2.yaml  f3.yaml  list_extend.yaml  order.yaml  test.yaml  test_list.yaml  test_order.yaml  undef.yaml  undef2.yaml
tests/: __init__.py  f1.yaml  f2.yaml  test.py  test.yaml
tests/test_files/: cp.yaml  dict_update.yaml  f1.yaml  foo_data.yaml  inherit.yaml  inherit_deepcp.yaml  inherit_subst.yaml  list_eval.yaml  test.yaml  test_list.yaml  test_multi.yaml  test_order.yaml
