[metadata]
name = metayaml-ng
author = Anton Tagunov
maintainer = William Barnhart
maintainer_email = williambbarnhart@gmail.com
description = Enhancements of yaml format to support include and python expression
long_description = file: README.rst
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Environment :: Other Environment
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
download_url = https://pypi.org/project/metayaml-ng/

[options]
install_requires =
    jinja2>=3.0
    PyYAML

[options.packages.find]
exclude =
    examples/*
    tools/*
    .*.yml
    *.egg-info